<resources>
    <string name="app_name">MyFirebaseApp</string>
    <string name="welcome">¡Bienvenido!</string>
    <string name="email">Correo</string>
    <string name="pass">Contraseña</string>
    <string name="forgot_pass">¿Olvidaste tu contraseña?</string>
    <string name="singin">Iniciar Sesión</string>
    <string name="o">O</string>
    <string name="img_google">Google</string>
    <string name="img_facebook">Facebook</string>
    <string name="no_account">¿No tienes cuenta?</string>
    <string name="have_account">¿Ya tienes una cuenta?</string>
    <string name="singup">Registrar</string>
    <string name="name">Nombre</string>
    <string name="sing_up">¡Regístrate!</string>
    <string name="register">Registrarme</string>
</resources>